57.最大子序和.md

--- a/src/cn/zy/leetCode/maxSubArray/57.最大子序和.md
+++ b/src/cn/zy/leetCode/maxSubArray/57.最大子序和.md
@@ -32,15 +32,17 @@
 
 分析：题目要求的是**连续**子数组，且连续子数组的**和为最大**。
 
-​	一开始按照正常思维，我们以左边为界限：选择nums[i]为开头的数，然后与右边的数组合为序列：
+​	一开始按照正常思维，我们以左边为界限：逐个选择数列中的数作为开头的数，然后与右边的数组合为序列：
 
-1. 选定-2为开头，选择组合：-2,1    -2,1,-3     -2,1,-3,4 .....
-2. 选定1位开头，选择组合：1,-3      1,-3,4      1,-3,4,-1
+例如：
+
+1. 选定-2为开头，选择组合：-2     -2,1      -2,1,-3     -2,1,-3,4 .....
+2. 选定1位开头，选择组合：  1      1,-3      1,-3,4      1,-3,4,-1
 3. 以此类推...
 
-​	这样我们找不出重叠子问题，那么，我们换一个方向尝试：以**右边为界限**
+​	这样几乎每一次的组合都是一个新的组合，不利于我们用已知推解未知。即找不出**重叠子问题**，那么，我们换一个方向尝试：
 
-每次选定一个数作为结尾，以这个数为右边界。
+以**右边为界限**每次选定一个数作为结尾，以这个数为右边界。
 
 ​	参考以下表格：
 
@@ -51,4 +53,8 @@
 | 以-3结尾： | #-2,1,-3        **#1,-3**        #-3        | 1,-3     | -2   |
 | 以4结尾：  | #-2,1,-3,4     #1,-3,4     #-3,4     **#4** | 4        | 4    |
 
-​	这样，我们每次增加一个数作为右边界的时候，我们只需要把之前算出的**最优子序列和递增数相加的和**与**递增数自身**比较，即可算出新的最优子序列。
+​	这样，我们每次增加一个数作为右边界的时候，我们只需要把**之前算出的最优子序列和递增数相加的和**与**递增数自身**比较，即可算出新的最优子序列。
+
+- 如果目前的最优子序列和当前递增数相加的和比递增数**大**，那么最优子序列则为当前的子序列+递增数，理解为递增数对当前的子序列有增益。
+
+- 如果目前的最优子序列和当前递增数相加的和比递增数**小**，那么递增数则自身作为下一个最优子序列，可以理解为，抛弃之前的序列，重新以该数作为连续子序列的开头（该子序列个数也有可能为1）。
