57. 最大子序和 补充笔记

--- a/src/cn/zy/leetCode/maxSubArray/57.最大子序和.md
+++ b/src/cn/zy/leetCode/maxSubArray/57.最大子序和.md
@@ -55,6 +55,12 @@
 
 ​	这样，我们每次增加一个数作为右边界的时候，我们只需要把**之前算出的最优子序列和递增数相加的和**与**递增数自身**比较，即可算出新的最优子序列。
 
+```
+PS: 以上两种的思维无非就是自顶向下和自底向上...
+```
+
+
+
 - 如果目前的最优子序列和当前递增数相加的和比递增数**大**，那么最优子序列则为当前的子序列+递增数，理解为递增数对当前的子序列有增益。
 
 - 如果目前的最优子序列和当前递增数相加的和比递增数**小**，那么递增数则自身作为下一个最优子序列，可以理解为，抛弃之前的序列，重新以该数作为连续子序列的开头（该子序列个数也有可能为1）。
