343 整数拆分 add dp solution and update note

--- a/src/cn/zy/leetCode/integerBreak/整数拆分.md
+++ b/src/cn/zy/leetCode/integerBreak/整数拆分.md
@@ -1,10 +1,5 @@
-
-
 ## 整数拆分
 
-```
-
-```
 
 | nums | expression | result |
 | ---- | ---------- | ------ |
@@ -21,4 +16,69 @@
 | 12   | 3\*3\*3\*3 | 81     |
 | 13   | 3\*3\*3\*4 | 108    |
 
-​	
+## Solution
+
+Reference: 
+
+[leetCode 整数拆分]: https://leetcode-cn.com/problems/integer-break/solution/man-hua-hao-ge-chu-pin-bi-shu-jing-pin-jia-qun-de-/
+
+
+
+- #### 数学公式思路
+
+简单说就是把每个数尽量拆分为多个3。
+
+```java
+public int cuttingRope(int n) {
+    if (n < 4) {
+        return n - 1;
+    }
+    int i = n % 3;
+    if (i == 1) {
+        return (int) (Math.pow(3, (n / 3) - 1) * 4);
+    } else if (i == 2) {
+        return (int) (Math.pow(3, n / 3) * 2);
+    } else {
+        return (int) (Math.pow(3, (n / 3)));
+    }
+}
+```
+
+
+
+------
+
+- #### DP
+
+定义状态：
+
+`dp[i]` 代表i拆分后得到的最优解。
+
+定义状态转移：
+
+```java
+dp[i] = max(dp[i], max(j, dp[j]) * max(i - j, dp[i - j]))
+```
+
+思路：当输入为n的时候，我们可以拆分为`dp[n-j]` 和`dp[j]` 。拆分为两个和为n的两个数，用他们的最优解来相乘，得出新的最优解`dp[n]`。
+
+**但是需要注意的是2和3的最优解。**
+
+例如：我们计算7的时候 就不能单纯用`dp[3] * dp[4]`、`dp[2] * dp[5]` ，因为`dp[2]` < 2 ； `dp[3]`  < 3。
+
+因此公式中后面两个max就是用来判断这种情况。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
