--- a/src/main/java/cn/zy/note/dp/动态规划.md
+++ b/src/main/java/cn/zy/note/dp/动态规划.md
@@ -1,44 +1,76 @@
 ## 动态规划
 
-#### 入门：
+### 入门：
 
-##### 斐波那契数列：
+###### 斐波那契数列：
 
 - 递归
 - 记忆化搜索
-- 动态规划(自顶向下/自底向上)
-
-##### 背包问题：
-
-- 0-1背包
-
-**状态定义**
-
-`dp[i][j]`表示取前`i`个物品，总重量不超过`j`的最大价值
-
-**状态转义方程**
-
-`dp[i][j]=max(dp[i-1][j],dp[i-1][j-w[i]]+v[i])`
-
-`dp[i-1][j]`表示当前第`i`个物品没有放进背包，表示继承上一次把物品放进背包时的最右解。
-
-`dp[i-1][j-w[i]]+v[i]`表示当前第`i`个物品放进了背包，即总背包容量要减去这个物品的重量`w[i]`，以及最优价值要加上`v[i]`
+- 动态规划
 
 
 
 
 
+### 背包问题：
+
+reference: csdn
+
+1. #### 01背包
+
+   **状态定义：**
+
+   `f[i][j]`表示把前`i`中物品放进一个容量为`j`的背包中可以获得的最大价值。
+
+   **状态转移方程：**
+
+   ```java
+   f[i][j]=max(f[i-1][j],f[i-1][j-w[i]]+v[i])	
+   ```
+
+   
+
+   [LeetCode  416. 分割等和子集 ]: https://leetcode-cn.com/problems/partition-equal-subset-sum/
+
+   ![](F:\my\MyLeetCode\code\MyLeetCode\src\main\java\cn\zy\note\dp\图1. 416.分割等和子集.jpg)
+
+   
+
+2. #### 完全背包
+
+递归：
+
+定义：`ks(i,t)`表示前`i`种物品，放入一个容量为`t`的背包的最大价值
+
+`ks(i,t) =max(ks(i-1,t),ks(i-1))`
 
 
-[leetcode：416 分割等和子集]: https://leetcode-cn.com/problems/partition-equal-subset-sum/
 
 
 
-|      |      |      |
-| ---- | ---- | ---- |
-|      |      |      |
-|      |      |      |
-|      |      |      |
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
