121. 买卖股票的最佳时机 SOLVED

--- a/src/main/java/cn/zy/note/dp/动态规划.md
+++ b/src/main/java/cn/zy/note/dp/动态规划.md
@@ -12,9 +12,15 @@
 
 
 
+### 解题思路
+
+1. 先尝试用暴力解法（brute-force），覆盖所有可能性。再分析这些可能性中重复的计算（或重复子计算），用动态规划的记性性去优化这些子计算。
+
+
+
 ### 背包问题：
 
-reference: csdn
+reference: 
 
 1. #### 01背包
 
